2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/tm27.h: Remove references to rtems_interrupt_catch since this
	archiecture does not use Simple Vectored Interrupt model.

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	have the same options.

2009-07-01	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am, preinstall.am: Update for generic interrupt support.

2009-04-28	Chris Johns <chrisj@rtems.org>

	* start/start.S: Update for boot_card command line change.

2009-02-10	Ralf Corsépius <ralf.corsepius@rtems.org>

	* clock/ckinit.c, startup/bspstart.c: Add prototypes.

2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_specs: Move -e start from *link to *startfile to avoid warning
	for undefined entry symbol when linking relocatables with binutils
	2.19.

2008-09-30	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Eliminate uses of old benchmark timer names.

2008-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate *_SOURCES.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Move noinst_LIBRARIES = libbsp.a before its
	components.

2008-09-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Cleanup ../../shared/include/bootcard.h handling.

2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Make letting boot_card() handle work area allocation
	mandatory. Rename RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION to
	BSP_BOOTCARD_OPTIONS.

2008-09-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am: Add use of shared bsppost.c

2008-09-18	Joel Sherrill <joel.sherrill@oarcorp.com>
